--- a/szakdolgozat-nyilvantarto/src/main/resources/templates/szakdolgozat_list.html
+++ b/szakdolgozat-nyilvantarto/src/main/resources/templates/szakdolgozat_list.html
@@ -1,31 +1,97 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Szakdolgozatok</title>
+    <meta charset="UTF-8">
+    <title>Szakdolgozatok listája</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
-<body>
-<h1>Szakdolgozatok listája</h1>
-<table>
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>Cím</th>
-        <th>Szerző</th>
-        <th>Műveletek</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="szakdolgozat : ${szakdolgozatok}">
-        <td th:text="${szakdolgozat.id}">1</td>
-        <td th:text="${szakdolgozat.cim}">Cím</td>
-        <td th:text="${szakdolgozat.szerzo}">Szerző</td>
-        <td>
-            <a th:href="@{'/szakdolgozat/edit/' + ${szakdolgozat.id}}">Szerkesztés</a>
-            <a th:href="@{'/szakdolgozat/delete/' + ${szakdolgozat.id}}">Törlés</a>
-        </td>
-    </tr>
-    </tbody>
-</table>
-<a href="/szakdolgozat/new">Új szakdolgozat felvitele</a>
+<body class="bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container">
+        <a class="navbar-brand" href="/szakdolgozatok">Szakdolgozat Nyilvántartó</a>
+        <div class="d-flex">
+            <form th:action="@{/logout}" method="post">
+                <button type="submit" class="btn btn-outline-light">Kijelentkezés</button>
+            </form>
+        </div>
+    </div>
+</nav>
+<div class="container mt-4">
+    <!-- Keresési űrlap -->
+    <div class="card mb-4">
+        <div class="card-header">
+            <h5>Keresés</h5>
+        </div>
+        <div class="card-body">
+            <form th:action="@{/szakdolgozat/search}" method="get" class="row g-3">
+                <div class="col-md-2">
+                    <label for="id" class="form-label">ID:</label>
+                    <input type="number" id="id" name="id" class="form-control"/>
+                </div>
+                <div class="col-md-3">
+                    <label for="cim" class="form-label">Cím:</label>
+                    <input type="text" id="cim" name="cim" class="form-control"/>
+                </div>
+                <div class="col-md-3">
+                    <label for="szerzo" class="form-label">Szerző:</label>
+                    <input type="text" id="szerzo" name="szerzo" class="form-control"/>
+                </div>
+                <div class="col-md-2">
+                    <label for="status" class="form-label">Státusz:</label>
+                    <input type="text" id="status" name="status" class="form-control"/>
+                </div>
+                <div class="col-md-2">
+                    <label for="temaVezeto" class="form-label">Témavezető:</label>
+                    <input type="text" id="temaVezeto" name="temaVezeto" class="form-control"/>
+                </div>
+                <div class="col-12">
+                    <button type="submit" class="btn btn-primary">Keresés</button>
+                    <button type="button" onclick="window.location.href='/szakdolgozatok'" class="btn btn-secondary ms-2">Összes listázása</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Lista táblázat -->
+    <div class="card">
+        <div class="card-header">
+            <h5>Szakdolgozatok listája</h5>
+        </div>
+        <div class="card-body">
+            <table class="table table-striped">
+                <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Cím</th>
+                    <th>Szerző</th>
+                    <th>Státusz</th>
+                    <th>Témavezető</th>
+                    <th>Dokumentum típusa</th>
+                    <th>Műveletek</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="szakdolgozat : ${szakdolgozatok}">
+                    <td th:text="${szakdolgozat.id}">1</td>
+                    <td th:text="${szakdolgozat.cim}">Cím</td>
+                    <td th:text="${szakdolgozat.szerzo}">Szerző</td>
+                    <td th:text="${szakdolgozat.status}">Státusz</td>
+                    <td th:text="${szakdolgozat.temaVezeto}">Témavezető</td>
+                    <td th:text="${szakdolgozat.dokumentumTipus}">Dokumentum típusa</td>
+                    <td>
+                        <a th:href="@{'/szakdolgozat/edit/' + ${szakdolgozat.id}}" class="btn btn-sm btn-warning">Szerkesztés</a>
+                        <a th:href="@{'/szakdolgozat/delete/' + ${szakdolgozat.id}}" class="btn btn-sm btn-danger">Törlés</a>
+                        <span th:if="${szakdolgozat.filePath != null}">
+                <a th:href="@{'/download/' + ${szakdolgozat.id}}" class="btn btn-sm btn-success mt-1">Letöltés</a>
+              </span>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+            <a href="/szakdolgozat/new" class="btn btn-primary">Új szakdolgozat felvitele</a>
+        </div>
+    </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
